--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -21,14 +21,25 @@ layout: default
             {{ post.title | escape }}
           </a>
         </h3>
-        {%- if site.show_excerpts -%}
-          {{ post.excerpt }}
-        {%- endif -%}
       </li>
       {%- endfor -%}
     </ul>
-
-    <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | relative_url }}">via RSS</a></p>
   {%- endif -%}
+  
+  <h2 class="post-list-heading">Research</h2>
+<ul class="post-list">
+  {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
+  {%- for item in site.research | sort: "date" | reverse -%}
+  <li>
+    <span class="post-meta">
+      {%- if item.date -%}{{ item.date | date: date_format }}{%- endif -%}
+    </span>
+    <h3><a class="post-link" href="{{ item.url | relative_url }}">{{ item.title | escape }}</a></h3>
+  </li>
+  {%- endfor -%}
+</ul>
+
+   <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | relative_url }}">via RSS</a></p>
+</ul>
 
 </div>
